--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 :root {
     --color-logoname-f: rgba(13, 110, 253, 1);
-    --color-logoname-s: rgba(250, 250, 250, 0.616);
+    --color-logoname-s: rgb(250, 0, 0);
 
     --bgcolor-header: rgba(51, 104, 250, 0.4);
     --bgcolor-sect-intro: rgba(175, 193, 245, 0.6);
@@ -121,6 +121,7 @@ main {
 }
 
 .list-card {
+    
     max-width: 100%;
     display: grid;
     overflow-y: auto;
@@ -129,7 +130,8 @@ main {
     justify-items: center;
     gap: 20px;
     margin: 0;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     padding: 10px;
     grid-template-rows: repeat(auto-fill, minmax(175px, 1fr));
 }
